Archive2/d1/531ea7698c51d4/output
main.cpp:3:35: error: default argument references parameter 'a'
void foo(const int a = 4, int b = a); 
                                  ^
1 error generated.
