Archive2/d1/531ea7698c51d4/main.cpp
#include <iostream>

void foo(const int a = 4, int b = a); 

int main(){ }